--- a/src/main/resources/com/drronidz/css/button.css
+++ b/src/main/resources/com/drronidz/css/button.css
@@ -46,6 +46,7 @@
     -fx-text-transform: uppercase;
     -fx-font-family: 'Titillium Web Regular';
     -fx-font-size: 18;
+    -fx-background-color: -fx-enterOrScanHover;
     -fx-text-fill: -fx-validateColor;
 }
 
