--- a/src/main/resources/com/drronidz/css/root.css
+++ b/src/main/resources/com/drronidz/css/root.css
@@ -14,6 +14,8 @@
     -fx-pressColorBorder:#3cd52f;
     -fx-disableColor:#1c252c;
     -fx-enterOrScan:#b4b4b2;
+    -fx-enterOrScanHover:#4b4a4a;
+    -fx-discountColor:#fc5461;
 }
 @font-face {
     src: url('font/LemonMilk.otf');
