--- a/src/main/resources/com/drronidz/css/button.css
+++ b/src/main/resources/com/drronidz/css/button.css
@@ -50,4 +50,11 @@
     -fx-text-fill: -fx-validateColor;
 }
 
-
+.button-add-cart {
+    -fx-background-radius: 50;
+    -fx-border-radius: 50;
+}
+.button-remove-cart {
+    -fx-background-radius: 50;
+    -fx-border-radius: 50;
+}
