--- a/src/main/resources/com/drronidz/main.fxml
+++ b/src/main/resources/com/drronidz/main.fxml
@@ -5,22 +5,24 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane gridLinesVisible="true" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="1000.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane alignment="CENTER" gridLinesVisible="true" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="625.0" prefWidth="1000.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="258.4000244140625" minWidth="10.0" prefWidth="150.79999999999998" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="514.399984741211" minWidth="10.0" prefWidth="143.99997558593753" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="478.4000244140625" minWidth="10.0" prefWidth="478.4000244140625" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="258.4000244140625" minWidth="10.0" prefWidth="100.00001831054688" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="514.399984741211" minWidth="10.0" prefWidth="162.60001525878909" />
+      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="570.0" minWidth="10.0" prefWidth="570.0" />
     <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="185.0" minWidth="185.0" prefWidth="185.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="371.59999999999997" minHeight="0.0" prefHeight="36.99999084472656" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="311.20001220703125" minHeight="288.8000183105469" prefHeight="288.8000183105469" valignment="TOP" vgrow="ALWAYS" />
     <RowConstraints maxHeight="286.39998168945317" minHeight="263.9999877929688" prefHeight="286.39998168945317" vgrow="SOMETIMES" />
+      <RowConstraints />
   </rowConstraints>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
    </padding>
    <children>
        <fx:include source="tools.fxml" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.rowSpan="3" />
+       <fx:include source="cart.fxml" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
    </children>
 </GridPane>
