--- a/src/main/resources/com/drronidz/css/button.css
+++ b/src/main/resources/com/drronidz/css/button.css
@@ -8,37 +8,45 @@
     src: url('font/LemonMilk.otf');
     font-family: 'Lemon/Milk';
 }
-
+/*root style buttons*/
 .button{
-    -fx-background-color:#1c252c;
+    -fx-background-color:-fx-colorThree;
 }
 
 .button:hover {
-    -fx-background-color: -fx-hoverColor;
+    -fx-background-color: -fx-colorTwo;
 }
 .button:disabled {
-    -fx-background-color: -fx-disableColor;
+    -fx-background-color: -fx-colorOne;
     -fx-opacity: 1;
 }
 /*disable icon style*/
 .button:disabled {
     -fx-background-color: #1c252c;
 }
+
+/*tools buttons */
 .button-reset {
-    -fx-background-color:-fx-resetColor ;
+    -fx-background-color:-fx-colorFour ;
+}
+.button-reset:hover {
+    -fx-background-color: -fx-colorThree;
 }
 .button-validate {
-    -fx-background-color:-fx-validateColor ;
+    -fx-background-color:-fx-colorTwo ;
     -fx-font-family: 'Lemon/Milk';
     -fx-font-size: 18;
 }
 .button-validate:hover {
     -fx-font-family: 'Lemon/Milk';
     -fx-font-size: 18;
-    -fx-text-fill: -fx-validateColor;
+    -fx-background-color: -fx-colorThree;
+    -fx-text-fill: -fx-colorTwo;
 }
+
+/*cart buttons */
 .button-enterOrScan {
-    -fx-background-color:-fx-enterOrScan;
+    -fx-background-color:#b4b4b2;
     -fx-font-family: 'Titillium Web Regular';
     -fx-font-size: 18;
 }
@@ -46,15 +54,15 @@
     -fx-text-transform: uppercase;
     -fx-font-family: 'Titillium Web Regular';
     -fx-font-size: 18;
-    -fx-background-color: -fx-enterOrScanHover;
-    -fx-text-fill: -fx-validateColor;
+    -fx-background-color: -fx-colorFive;
+    -fx-text-fill: -fx-colorTwo;
 }
 
-.button-add-cart {
+.button-increment-cart {
     -fx-background-radius: 50;
     -fx-border-radius: 50;
 }
-.button-remove-cart {
+.button-decrement-cart {
     -fx-background-radius: 50;
     -fx-border-radius: 50;
 }
