--- a/src/main/resources/com/drronidz/main.fxml
+++ b/src/main/resources/com/drronidz/main.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXDrawer?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="CENTER" gridLinesVisible="true" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="625.0" prefWidth="1200.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane alignment="CENTER" gridLinesVisible="true" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="625.0" prefWidth="1200.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.drronidz.controller.MainController">
   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="258.4000244140625" minWidth="10.0" prefWidth="100.00001831054688" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="514.399984741211" minWidth="10.0" prefWidth="162.60001525878909" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="364.79998779296875" minWidth="10.0" prefWidth="193.60001220703126" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="514.399984741211" minWidth="10.0" prefWidth="191.19998779296876" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="605.0" minWidth="605.0" prefWidth="605.0" />
     <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="185.0" minWidth="185.0" prefWidth="185.0" />
   </columnConstraints>
@@ -22,7 +23,8 @@
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
    </padding>
    <children>
-       <fx:include source="tools.fxml" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.rowSpan="3" />
-       <fx:include source="cart.fxml" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+       <fx:include fx:id="tools" source="tools.fxml" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.rowSpan="3" />
+       <fx:include fx:id="cart" source="cart.fxml" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+      <JFXDrawer fx:id="enterOrScanDrawer" alignment="TOP_CENTER" defaultDrawerSize="600.0" resizableOnDrag="true" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="3" />
    </children>
 </GridPane>
