start working on - filter product listview  - design filter product list cell.  - adding controller & fix issues.  -

--- a/src/main/resources/com/drronidz/css/label.css
+++ b/src/main/resources/com/drronidz/css/label.css
@@ -41,3 +41,12 @@
     -fx-font-family: "Titillium Web SemiBold";
     -fx-font-size: 14;
 }
+/*product listview*/
+.taxe-label{
+    -fx-font-family: "Titillium Web SemiBold";
+    -fx-font-size: 14;
+}
+.taxe-value-label{
+    -fx-font-family: "Titillium Web Bold";
+    -fx-font-size: 14;
+}
