finishing the work on AbstractListCell  - adding global loadfxml method.  - adding css class for DemandQuantity

--- a/src/main/resources/com/drronidz/css/label.css
+++ b/src/main/resources/com/drronidz/css/label.css
@@ -14,7 +14,7 @@
 }
 @font-face {
     src: url('font/TitilliumWeb-Bold.ttf');
-    font-family: 'Titillium Web Bold'
+    font-family: 'Titillium Web Bold';
 }
 /*tools view */
 .ticket {
@@ -40,6 +40,10 @@
 .cart-item-label{
     -fx-font-family: "Titillium Web SemiBold";
     -fx-font-size: 14;
+}
+.demand-total-label {
+    -fx-font-family: "Titillium Web Bold";
+    -fx-font-size: 15;
 }
 /*product listview*/
 .taxe-label{
