finalizing the work on filter product drawer .  - handle updates in cart list  - update subTotal value automatically    - via (+/- buttons) in cart list cell.    - via (checkbox) in filter product cell.

--- a/src/main/resources/com/drronidz/css/controls/drawer.css
+++ b/src/main/resources/com/drronidz/css/controls/drawer.css
@@ -1,3 +1,8 @@
+@import "../root.css";
+
 .jfx-drawer-overlay-pane {
-    -fx-background-color: -fx-colorOne !important;
+    -fx-background-color: -fx-colorNone ;
+}
+.jfx-drawer-side-pane {
+    -fx-background-color: -fx-colorSix !important;
 }
