--- a/src/main/resources/com/drronidz/css/button.css
+++ b/src/main/resources/com/drronidz/css/button.css
@@ -11,10 +11,14 @@
 /*root style buttons*/
 .button{
     -fx-background-color:-fx-colorThree;
+    -fx-font-family: 'Titillium Web Regular';
+    -fx-text-fill:-fx-colorTwo ;
+    -fx-font-size: 18;
 }
 
 .button:hover {
     -fx-background-color: -fx-colorTwo;
+    -fx-text-fill:-fx-colorThree ;
 }
 .button:disabled {
     -fx-background-color: -fx-colorOne;
@@ -28,13 +32,16 @@
 /*tools buttons */
 .button-reset {
     -fx-background-color:-fx-colorFour ;
+    -fx-text-fill: -fx-colorSeven;
 }
 .button-reset:hover {
     -fx-background-color: -fx-colorThree;
+    -fx-text-fill: -fx-colorFour;
 }
 .button-validate {
     -fx-background-color:-fx-colorTwo ;
     -fx-font-family: 'Lemon/Milk';
+    -fx-text-fill: -fx-colorThree;
     -fx-font-size: 18;
 }
 .button-validate:hover {
@@ -66,3 +73,5 @@
     -fx-background-radius: 50;
     -fx-border-radius: 50;
 }
+
+/*Filter product Drawer*/
