--- a/src/main/resources/com/drronidz/css/root.css
+++ b/src/main/resources/com/drronidz/css/root.css
@@ -5,6 +5,7 @@
     -fx-colorFour:#fc5461;
     -fx-colorFive:#4b4b4b;
     -fx-colorSix:#c3cdd6;
+    -fx-colorSeven: white;
 }
 @font-face {
     src: url('font/LemonMilk.otf');
