--- a/src/main/resources/com/drronidz/tools.fxml
+++ b/src/main/resources/com/drronidz/tools.fxml
@@ -7,13 +7,24 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="185.0" style="-fx-background-color: yellow;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+
+<GridPane gridLinesVisible="true" hgap="5.0" prefHeight="685.0" prefWidth="210.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints maxHeight="385.1999755859375" minHeight="10.0" prefHeight="351.9999938964844" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="413.5999877929687" minHeight="10.0" prefHeight="334.4000061035156" vgrow="SOMETIMES" />
+   </rowConstraints>
    <children>
-      <Label alignment="TOP_CENTER" prefHeight="323.0" prefWidth="186.0" styleClass="ticket" stylesheets="@css/label.css" text="Ticket n°  15932114" />
-      <GridPane alignment="CENTER" gridLinesVisible="true" hgap="2.0" prefHeight="247.0" prefWidth="278.0" style="-fx-background-color: red;">
+      <Label alignment="TOP_LEFT" prefHeight="365.0" prefWidth="200.0" styleClass="ticket" stylesheets="@css/label.css" text="Ticket n°  15932114">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </Label>
+      <GridPane alignment="CENTER" gridLinesVisible="true" hgap="5.0" prefHeight="248.0" prefWidth="200.0" style="-fx-background-color: red;" vgap="5.0" GridPane.rowIndex="1">
         <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" />
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" />
@@ -44,7 +55,7 @@
                   <URL value="@css/icon.css" />
                </stylesheets>
                <graphic>
-                  <FontIcon iconLiteral="las-calendar" iconSize="32" styleClass="button"  />
+                  <FontIcon iconLiteral="las-calendar" iconSize="32" styleClass="button" />
                </graphic>
             </JFXButton>
             <JFXButton fx:id="folder" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" focusTraversable="false" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" textAlignment="CENTER" textOverrun="LEADING_WORD_ELLIPSIS" wrapText="true" GridPane.rowIndex="1">
@@ -154,13 +165,19 @@
                   <URL value="@css/icon.css" />
                </stylesheets>
                <graphic>
-                  <FontIcon iconLiteral="las-shopping-cart" iconSize="40" styleClass="button-validate"  />
+                  <FontIcon iconLiteral="las-shopping-cart" iconSize="40" styleClass="button-validate" />
                </graphic>
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </JFXButton>
          </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </GridPane>
    </children>
-</VBox>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
+</GridPane>
