--- a/src/main/resources/com/drronidz/tools.fxml
+++ b/src/main/resources/com/drronidz/tools.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-
-<GridPane gridLinesVisible="true" hgap="5.0" prefHeight="685.0" prefWidth="210.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane gridLinesVisible="true" hgap="5.0" prefHeight="685.0" prefWidth="210.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.drronidz.controller.ToolsController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
    </columnConstraints>
@@ -78,7 +77,7 @@
                   <FontIcon iconLiteral="las-file-alt" iconSize="32" styleClass="button" />
                </graphic>
             </JFXButton>
-            <JFXButton fx:id="reset" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" focusTraversable="false" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="button-reset" textAlignment="CENTER" textOverrun="LEADING_WORD_ELLIPSIS" wrapText="true" GridPane.columnIndex="2">
+            <JFXButton fx:id="removeItem" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" focusTraversable="false" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="button-reset" textAlignment="CENTER" textOverrun="LEADING_WORD_ELLIPSIS" wrapText="true" GridPane.columnIndex="2">
                <stylesheets>
                   <URL value="@css/root.css" />
                   <URL value="@css/button.css" />
