--- a/src/main/resources/com/drronidz/main.fxml
+++ b/src/main/resources/com/drronidz/main.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane fx:id="stackPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.drronidz.controller.MainController">
+<StackPane fx:id="stackPane" alignment="TOP_LEFT" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.drronidz.controller.MainController">
    <children>
-      <GridPane alignment="TOP_CENTER" gridLinesVisible="true" hgap="5.0" prefHeight="620.0" prefWidth="1200.0" vgap="5.0">
+      <GridPane gridLinesVisible="true" hgap="5.0" prefHeight="620.0" prefWidth="1200.0" vgap="5.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="180.0" prefWidth="200.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="260.0" prefWidth="260.0" />
